# supplemental information for setup.py
[metadata]
license_file = ../../copyright.txt

[flake8]
# long lines okay
ignore = E501

[yapf]
# All changes must be PEP8 compatible
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF=True
COLUMN_LIMIT=95
DEDENT_CLOSING_BRACKETS=True
SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET=False
