# supplemental information for setup.py
[metadata]
license_file = ../../copyright.txt

[flake8]
# long lines okay
extend-ignore = E501

[options.entry_points]
console_scripts = 
	chimerax = chimerax.core:init_nogui
#gui_scripts
#	chimerax = chimerax.core:init

[yapf]
# All changes must be PEP8 compatible
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF=True
COLUMN_LIMIT=95
DEDENT_CLOSING_BRACKETS=True
SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET=False
